Colorblind working on

--- a/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1037.050861,Y=2047.073202,Z=350.382236),CamRotation=(Pitch=-24.687521,Yaw=-74.530670,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=-6.106380,Yaw=31.047299,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1797.380165,Y=1495.599928,Z=911.093812),CamRotation=(Pitch=333.907228,Yaw=145.432495,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1066.757757,Y=3593.357967,Z=156.214693),CamRotation=(Pitch=-30.000000,Yaw=89.999999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1237.793980,Y=920.167525,Z=380.221323),CamRotation=(Pitch=0.000000,Yaw=90.000001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=330.983789,Y=3563.202289,Z=805.802797),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=330.983866,Y=3563.202428,Z=546.539930),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld.NewWorld", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1512.520081,Y=-1717.952294,Z=3021.809863),CamRotation=(Pitch=-49.800000,Yaw=65.200001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld1.NewWorld1", (LevelViewportsInfo=((),(),(),(),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-364.144372,Y=735.427023,Z=2326.116940),CamRotation=(Pitch=-51.000000,Yaw=-92.600001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_2.Level_2", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1071.425037,Y=-1150.995762,Z=2121.607495),CamRotation=(Pitch=-46.000001,Yaw=92.800001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
-EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=3091.159925,Y=1775.038362,Z=200.660832),CamRotation=(Pitch=-7.000000,Yaw=183.200002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=274.297172,Y=3563.202289,Z=872.201629),CamRotation=(Pitch=-25.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=3937.626710,Y=-292.554799,Z=278.574741),CamRotation=(Pitch=-39.400000,Yaw=-31.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-5.999900,Yaw=-1322.400020,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-667.608009,Y=-1940.447160,Z=2016.168052),CamRotation=(Pitch=-27.800000,Yaw=93.400001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=3091.159925,Y=1775.038362,Z=200.660832),CamRotation=(Pitch=-3.600000,Yaw=194.600002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=274.297172,Y=3563.202289,Z=872.201629),CamRotation=(Pitch=-25.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=3937.626710,Y=-292.554799,Z=278.574741),CamRotation=(Pitch=-39.400000,Yaw=-31.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-5.999900,Yaw=-1322.400020,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-225.372585,Y=-2694.487249,Z=2449.595102),CamRotation=(Pitch=-34.811896,Yaw=91.417815,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -452,6 +452,7 @@ InputTriggerTimedBase=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.M
 Blueprint=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
 BP_Cannon_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
 K2Node_FunctionResult=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
+K2Node_FunctionEntry=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
 
 [EditorStartup]
 LastLevel=/Game/Jude/MainMenu
@@ -622,7 +623,7 @@ CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 BoxComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
@@ -639,7 +640,7 @@ BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 WorldPartitionMiniMap="\"Object\" "
 BackgroundBlur="\"Object\" "
-ContentWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object\" "
 Button="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 BP_MainMenu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 WidgetBlueprint="\"Object\" "
@@ -829,6 +830,7 @@ FloatingPawnMovement="\"Object\" \"Object.Velocity.Velocity\" "
 BP_Ball_C="\"Object\" "
 Pawn="\"Object\" "
 Slider="\"Object\" "
+NamedSlot="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2649,21 +2651,31 @@ BP_Cannon_C.Networking=True
 BP_Cannon_C.Default=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+NamedSlot.Layout=True
+NamedSlot.Exposing=True
+NamedSlot.Accessibility=True
+NamedSlot.Behavior=True
+NamedSlot.Render Transform=True
+NamedSlot.Performance=True
+NamedSlot.Rendering=True
+NamedSlot.Navigation=True
+NamedSlot.Localization=True
+BP_Accessability_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -2687,10 +2699,9 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Barney/BP_Ball.BP_Ball
-OpenAssetsAtExit=/Game/Barney/BP_Cannon.BP_Cannon
-OpenAssetsAtExit=/Game/SeeSaw_BP.SeeSaw_BP
 OpenAssetsAtExit=/Game/Jude/Widgets/BP_Accessability.BP_Accessability
+OpenAssetsAtExit=/Game/Jude/Widgets/BP_MainMenu.BP_MainMenu
+OpenAssetsAtExit=/Game/Jude/Widgets/BP_UI.BP_UI
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2721,8 +2732,8 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Jude
 ContentBrowserDrawer.JumpMRU=/All/Game/Harry
 ContentBrowserDrawer.JumpMRU=/All/Game/Barney
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/Widgets
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/Sound
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/GC_Cube2_GC_Cube2
@@ -2806,19 +2817,21 @@ K2Node_CustomEvent.Graph=False
 BP_Ball_C.Actor=True
 CameraComponent.Physics=True
 SpringArmComponent.Rendering=False
+NamedSlot.Accessibility=False
+BackgroundBlur.Behavior=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Jude/MainMenu
-MRUItem1=/Game/Jude/Widgets/BP_Accessability
-MRUItem2=/Game/SeeSaw_BP
-MRUItem3=/Game/Barney/BP_Cannon
-MRUItem4=/Game/Barney/BP_Ball
-MRUItem5=/Game/Harry/Level_1
-MRUItem6=/Game/Physics_testing
-MRUItem7=/Game/Harry/Hole_1
-MRUItem8=/Game/Jude/Widgets/BP_MainMenu
-MRUItem9=/Game/Harry/BallFriction_MAT
-MRUItem10=/Game/Jude/Widgets/BP_UI
+MRUItem1=/Game/Jude/Widgets/BP_UI
+MRUItem2=/Game/Jude/Widgets/BP_MainMenu
+MRUItem3=/Game/Jude/Widgets/BP_Accessability
+MRUItem4=/Game/Harry/Level_1
+MRUItem5=/Game/SeeSaw_BP
+MRUItem6=/Game/Barney/BP_Cannon
+MRUItem7=/Game/Barney/BP_Ball
+MRUItem8=/Game/Physics_testing
+MRUItem9=/Game/Harry/Hole_1
+MRUItem10=/Game/Harry/BallFriction_MAT
 MRUItem11=/Game/Jude/BP_FlipperAuto
 MRUItem12=/Game/Jude/BP_TrapDoor
 MRUItem13=/Game/Jude/Sound/Main_Menu
@@ -2897,7 +2910,7 @@ PerWorldEditorSettings=(("/Game/Physics_testing.Physics_testing", (LoadedEditorR
 /Game/Jude/Widgets/BP_Accessability.BP_Accessability=1
 /Game/Jude/Widgets/BP_Options.BP_Options=0
 /Game/Jude/Widgets/BP_MainMenu.BP_MainMenu=0
-/Game/Jude/Widgets/BP_UI.BP_UI=0
+/Game/Jude/Widgets/BP_UI.BP_UI=1
 /Game/Jude/Leaves_NS.Leaves_NS=0
 /Niagara/Modules/Emitter/SpawnPerUnit.SpawnPerUnit=0
 /Game/Jude/BP_DropFloor.BP_DropFloor=0
@@ -3105,8 +3118,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
